# sPhysNet-Taut

./: CHANGELOG.md  environment.yaml  predict_tautomer.py  pyproject.toml
src/sphysnet_taut/: calc_input.py  get_vmrs.py  models.py  tautomer.py
src/sphysnet_taut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sphysnet_taut/Networks/: PhysDimeNet.py
src/sphysnet_taut/Networks/DimeLayers/: MessagePassingLayer.py  OutputLayer.py
src/sphysnet_taut/Networks/PhysLayers/: CoulombLayer.py  Interaction_module.py  PhysModule.py
src/sphysnet_taut/Networks/SharedLayers/: AtomToEdgeLayer.py
src/sphysnet_taut/molgpka/: predict_pka.py  protonate.py
src/sphysnet_taut/molgpka/utils/: gcn_conv.py  ionization_group.py
src/sphysnet_taut/utils/: grimme_d3.py  utils_functions.py
